# jax-pt

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: classpt-tree-parity.md  flow.md  index.md  matrices.md  mcmc-bottleneck-analysis.md
envs/: apple-metal-jax-benchmark.yml
examples/: cosmoprimo_multipoles_vs_classpt.py  density_split_multipoles.py  mcmc_multipole_parameter_sweep.py  native_multipoles_vs_classpt.py  native_realspace_vs_classpt.py  native_tree_vs_oneloop.py  tree_vs_oneloop.py
jaxpt/: __init__.py  api.py  basis.py  bias.py  config.py  cosmology.py  native.py  parameter.py  theory.py  utils.py
jaxpt/emulators/: __init__.py  multipoles.py  native.py  taylor.py
jaxpt/inference/: __init__.py  base.py  pocomc.py
jaxpt/kernels/: __init__.py  linear.py  loops.py  rsd.py  rsd_spectral.py  spectral.py  tree.py
jaxpt/theories/: base.py  (+7 more)
scripts/: benchmark_jax_backend.py  benchmark_realspace_prediction.py  build_native_multipole_taylor_emulator.py  build_taylor_emulator.py  compare_taylor_emulator.py  plot_bestfit_pgg_chain.py  plot_simulation_pgg_measurements.py  plot_triangle_chain.py  run_pocomc_inference.py  scan_taylor_emulator_error.py
tests/: conftest.py  test_assembly.py  test_compare_taylor_emulator_script.py  test_density_split.py  test_density_split_emulator.py  test_inference.py  test_linear_input.py  test_parameters.py  test_plot_bestfit_pgg_chain_script.py  test_plot_triangle_chain_script.py  test_run_pocomc_inference_script.py  test_scan_taylor_emulator_error_script.py  test_simulation_measurements.py  test_taylor_emulator.py
(+3 files in other folders)
