[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-pt"
version = "0.1.0"
description = "JAX-oriented tools for one-loop EFT large-scale structure calculations."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "E. Paillas"},
]
dependencies = [
  "jax>=0.4.28",
  "jaxlib>=0.4.28",
  "numpy>=1.26",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "scipy>=1.12",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["jaxpt*"]

[tool.setuptools.package-data]
"jaxpt.theories" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
